--- a/TestAFunctionWithIOClass.ipynb
+++ b/TestAFunctionWithIOClass.ipynb
@@ -120,7 +120,6 @@
     "    for i in range(0,len(answers)):\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qr,qc,ioClass)\n",
-    "\n",
     "        qc.measure(qr,cr)\n",
     "        if t == 0 and details == 1 and drawPicture == 1:\n",
     "            circuit_drawer(qc).show()\n",
@@ -157,53 +156,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./tests/ex1.pla\n",
-      "The constants are set to .constants 0-----\n",
+      "./tests/hwb4_52.pla\n",
+      "The constants are set to .constants ----\n",
       "\n",
-      "The circuit has garbage lines in it or file parsed incorrectly, check ioclass\n",
-      "The circuit has constant inputs in it or file parsed incorrectly, check ioclass\n",
-      "{'00001': '1', '11001': '1', '01011': '1', '10011': '1', '00111': '1', '11111': '1', '01101': '1', '10101': '1', '01000': '1', '10000': '1', '00010': '1', '11010': '1', '01110': '1', '10110': '1', '00100': '1', '11100': '1'}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0EF0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18A3860>\n",
-      "{'110101': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '0', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0BE0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1400>\n",
-      "{'110011': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '0', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897B70>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCBC1F0748>\n",
-      "{'100001': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '0', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897E80>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850A58>\n",
-      "{'100111': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '1', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1978>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18DACF8>\n",
-      "{'101101': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '1', '1', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C1710>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850898>\n",
-      "{'101011': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '1', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C49B0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B66860>\n"
+      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
+      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
+      "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
+      "{'0000': 1024}\n"
      ]
     },
     {
@@ -218,63 +177,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'111001': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '1', '0', '1']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18503C8>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7FCF8>\n",
-      "{'111111': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '0', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7FD68>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B58208>\n",
-      "{'010001': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '0', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B7F2B0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B4C898>\n",
-      "{'010111': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '0', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B669E8>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B4C080>\n",
-      "{'000101': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '0', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B66A20>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C45F8>\n",
-      "{'000011': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '1', '1', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1B411D0>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850C50>\n",
-      "{'001001': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '0', '1', '1', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18DA438>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18C17F0>\n",
-      "{'001111': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '0', '0', '1', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18A4160>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1897EF0>\n",
-      "{'011101': 1024}\n",
-      "Constant field is: 0-----\n",
-      "Length of constants field is: 6\n",
-      "Reached here in preparation of inputs!!!, the inputList is ['0', '1', '1', '1', '0', '0']\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC1850978>\n",
-      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x000001DCC18E3160>\n",
-      "{'011011': 1024}\n",
+      "{'0001': 1024}\n",
+      "{'1000': 1024}\n",
+      "{'0011': 1024}\n",
+      "{'0100': 1024}\n",
+      "{'1010': 1024}\n",
+      "{'1001': 1024}\n",
+      "{'0111': 1024}\n",
+      "{'0010': 1024}\n",
+      "{'0110': 1024}\n",
+      "{'0101': 1024}\n",
+      "{'1110': 1024}\n",
+      "{'1100': 1024}\n",
+      "{'1101': 1024}\n",
+      "{'1011': 1024}\n",
+      "{'1111': 1024}\n",
       "Input:Received:Expected\n",
-      "{'00001': '1', '11001': '1', '01011': '1', '10011': '1', '00111': '1', '11111': '1', '01101': '1', '10101': '1', '01000': '1', '10000': '1', '00010': '1', '11010': '1', '01110': '1', '10110': '1', '00100': '1', '11100': '1'}\n",
+      "{'0000': '0000', '0001': '1000', '0010': '0001', '0011': '1100', '0100': '0010', '0101': '0101', '0110': '1001', '0111': '1110', '1000': '0100', '1001': '0110', '1010': '1010', '1011': '0111', '1100': '0011', '1101': '1011', '1110': '1101', '1111': '1111'}\n",
       "ERROR: 0\n",
       "SUCCESS\n",
       "0 1\n"
@@ -284,9 +203,9 @@
    "source": [
     "#test not\n",
     "\n",
-    "testNames=[\"test00\",\"ex1\",\"testCVCVdag\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
+    "testNames=[\"0410184\",\"test00\",\"ex1\",\"testCVCVdag\",\"ham3_28\",\"miller\",\"hwb4_52\",\"testVCVC\",\"3_17\",\"test01\",\"simpleSwap\",\"swap1-2\",\"swap1-3\", \"swap3-2\",\"test1\",\"testCVCV\",\"simpleToffoli\",\"hwb4_52_mod\",\"toffoli\"]\n",
     "fails = 0\n",
-    "testNames = [\"ex1\"]\n",
+    "testNames = [\"hwb4_52\"]\n",
     "for fileName in testNames:\n",
     "    fileName = testDir + fileName \n",
     "    fails = fails + testFromFile(fileName,1,0)\n",
