CtgExperiments.ipynb edited online with Bitbucket

--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
      ]
     }
@@ -195,70 +195,10 @@
    "metadata": {
     "scrolled": false
    },
-<<<<<<< HEAD
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./tests/hwb4_49.pla\n",
-      "The constants are set to .constants ----\n",
-      "\n",
-      "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
-      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
-      "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn'] 18\n",
-      "Epoch number: 0\n",
-      "Current layout of ctg is: {'a': 'a', 'b': 'b', 'c': 'c', 'd': 'd'}\n",
-      "Ohhh LaLa\n",
-      "Ohhh LaLa\n",
-      "Length of IBM compiled circuit is: 12910\n",
-      "Missing connections are [['b', 'd'], ['a', 'd'], ['a', 'd']]\n",
-      "Lines are: ['sw b c', 't2 d c', 'sw b c', 't2 c d\\n', 't2 d c\\n', 't3 a d c\\n', 't3 c d a\\n', 't4 b c d a\\n', 't3 b d a\\n', 't4 a b c d\\n', 't3 a d c\\n', 'sw a b', 'sw b c', 't2 d c', 'sw b c', 'sw a b', 't3 a c d\\n', 't3 a b d\\n', 'sw a b', 'sw b c', 't2 d c', 'sw b c', 'sw a b', 't2 b c\\n', 't2 c b\\n', 't2 a b\\n', 't2 b a\\n']  length of lines is: 27\n",
-      "Length of IBM compiled circuit with fixes is: 8395\n",
-      "Epoch number: 1\n",
-      "Current layout of ctg is: {'c': 'm', 'd': 'c', 'b': 'n', 'a': 'b'}\n",
-      "Ohhh LaLa\n",
-      "Ohhh LaLa\n",
-      "Missing connections are [['b', 'd']]\n",
-      "Lines are: ['sw b a', 't2 d a', 'sw b a', 't2 c d\\n', 't2 d c\\n', 't3 a d c\\n', 't3 c d a\\n', 't4 b c d a\\n', 't3 b d a\\n', 't4 a b c d\\n', 't3 a d c\\n', 't2 d a\\n', 't3 a c d\\n', 't3 a b d\\n', 't2 d a\\n', 't2 b c\\n', 't2 c b\\n', 't2 a b\\n', 't2 b a\\n']  length of lines is: 19\n",
-      "Length of IBM compiled circuit with fixes is: 7755\n",
-      "Epoch number: 2\n",
-      "Current layout of ctg is: {'c': 'm', 'd': 'c', 'b': 'n', 'a': 'l'}\n",
-      "Ohhh LaLa\n",
-      "Ohhh LaLa\n",
-      "Missing connections are [['b', 'd'], ['a', 'd'], ['a', 'd'], ['a', 'b'], ['a', 'b']]\n",
-      "Lines are: ['sw b c', 't2 d c', 'sw b c', 't2 c d\\n', 't2 d c\\n', 't3 a d c\\n', 't3 c d a\\n', 't4 b c d a\\n', 't3 b d a\\n', 't4 a b c d\\n', 't3 a d c\\n', 'sw a c', 't2 d c', 'sw a c', 't3 a c d\\n', 't3 a b d\\n', 'sw a c', 't2 d c', 'sw a c', 't2 b c\\n', 't2 c b\\n', 'sw a c', 't2 c b', 'sw a c', 'sw a c', 't2 b c', 'sw a c']  length of lines is: 27\n",
-      "Length of IBM compiled circuit with fixes is: 15386\n",
-      "Epoch number: 3\n",
-      "Current layout of ctg is: {'c': 'm', 'd': 'c', 'b': 'n'}\n",
-      "Ohhh LaLa\n",
-      "Ohhh LaLa\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'a'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-dbcedd03e178>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#if testFromFile(filename) == 0:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mfileName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtestDir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfileName\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mbigFunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-6797bee6550f>\u001b[0m in \u001b[0;36mbigFunction\u001b[0;34m(fileName)\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m                 \u001b[0mdefaultIBMCost\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmeasureFidelityWithoutChanges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcr\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mqc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m             \u001b[0mctg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfixTheStuff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m             \u001b[0;31m#This one needs to comply with changes you did\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0;31m#qc,qr = ctg.readFixedGatesFromCtg(qr,qc)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-6797bee6550f>\u001b[0m in \u001b[0;36mfixTheStuff\u001b[0;34m(ctg)\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mfixTheStuff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 83\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Missing connections are\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mctg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetMissingConnections\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     84\u001b[0m     \u001b[0;31m#This one to fix the changes... fixthemissingedges connects stuff around. did not test though\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     85\u001b[0m     \u001b[0mctg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfixMissingEdges\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/codes/circuit-graph/CircuitTransitionGraph.py\u001b[0m in \u001b[0;36mgetMissingConnections\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0;31m#print(\"Self skeleton is\",self.sk)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m             \u001b[0mqubitFrom\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m             \u001b[0mqubitTo\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqubitFrom\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'a'"
-     ]
-    }
-   ],
-   "source": [
-    "goodExamples = [\"0410184\",\"ex1\",\"hwb4_52\",\"parity\",\"graycode6_47\",\"hwb4_49\"]\n",
-    "fileName=goodExamples[5]\n",
-=======
    "outputs": [],
    "source": [
     "goodExamples = [\"0410184\",\"ex1\",\"hwb4_52\",\"parity\"]\n",
     "fileName=goodExamples[0]\n",
->>>>>>> f099cc6b535b982143238510a3cc9ce08cf83e30
     "#if testFromFile(filename) == 0:\n",
     "fileName = testDir+fileName\n",
     "bigFunction(fileName)"
@@ -281,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
